code analyse fixes, weak reference for displaytext in richclient